--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -504,7 +504,7 @@
             <fieldset>
               <label class="form-control">
                 <input
-                  class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                  class="border-color-primary-button-background bg-background-color text-color-primary-button-background focus:ring-color-primary-button-background"
                   type="radio"
                   name="radio"
                 />
@@ -522,7 +522,7 @@
           <form>
             <label class="form-control">
               <input
-                class="text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                class="border-color-primary-button-background bg-background-color text-color-primary-button-background focus:ring-color-primary-button-background"
                 type="radio"
                 name="radio"
               />
