--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -554,9 +554,8 @@
             <form class="">
               <label class="flex">
                 <input
-                  class="my-auto text-color-white accent-graes-600 checked:bg-graes-600 focus:bg-graes-600 focus:ring-graes-600 active:bg-graes-600"
+                  class="b-2 my-auto h-5 w-5 border-color-primary-button-background bg-background-color text-color-primary-button-background focus:ring-color-primary-button-background"
                   type="checkbox"
-                  name="checkbox"
                 />
 
                 <h4
