--- a/src/information.html
+++ b/src/information.html
@@ -566,7 +566,7 @@
                 <label class="form-control">
                   <div class="flex">
                     <input
-                      class="my-auto text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                      class="my-auto border-color-primary-button-background bg-background-color text-color-primary-button-background focus:ring-color-primary-button-background"
                       type="radio"
                       name="radio"
                     />
@@ -581,7 +581,7 @@
                 <label class="form-control">
                   <div class="flex">
                     <input
-                      class="my-auto text-[#6F9043] accent-[#6F9043] checked:bg-[#6F9043] focus:bg-[#6F9043] focus:ring-[#6F9043] active:bg-[#6F9043]"
+                      class="my-auto border-color-primary-button-background bg-background-color text-color-primary-button-background focus:ring-color-primary-button-background"
                       type="radio"
                       name="radio"
                     />
