--- a/src/information.html
+++ b/src/information.html
@@ -558,7 +558,7 @@
             </form>
             <!-- besked om levering -->
             <div class="grid gap-xs-spacing-mobile">
-              <h3 class="w-2/3 font-other-headings text-h5-mobile">
+              <h3 class="font-other-headings text-h5-mobile">
                 Vil du have besked når du får leveret en buket?
               </h3>
 
