--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -477,6 +477,8 @@
 
       <!-------------------------- ANDEN SEKTION -->
 
+      <!-- RADIO BUTTONS -->
+
       <section
         class="mb-l-spacing-desktop flex items-baseline justify-center gap-xl-spacing-desktop lg:gap-xxxl-spacing-desktop"
       >
